update button names

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <h6 class="card-subtitle mb-2 text-muted">Project Manager, Lead Artist</h6>
               <p class="card-text">Librarians stalk the halls in search of you! Sneak through the library and don’t get caught.</p>
               <p class="card-text"> C#, Unity, Blender, Photoshop </p>
-                <a class="btn btn-primary btn-outline-light" href="https://youtu.be/i5BB6Fa43lk">Video Demo</a>
+                <a class="btn btn-primary btn-outline-light" href="https://youtu.be/i5BB6Fa43lk">Video</a>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
                   <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
-                  <a class="btn btn-primary btn-outline-light" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">View eCard</a>
+                  <a class="btn btn-primary btn-outline-light" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">eCard</a>
                 </div>
               </div>
             </div>
@@ -94,7 +94,7 @@
                   <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
-                  <a class="btn btn-primary btn-outline-light" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">View eCard</a>
+                  <a class="btn btn-primary btn-outline-light" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">eCard</a>
                 </div>
               </div>
             </div>
@@ -113,7 +113,7 @@
                   <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
                   <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help.</p>
                   <p class="card-text"> C#, Unity, Blender, Photoshop </p>
-                    <a class="btn btn-primary btn-outline-light" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video Demo</a>
+                    <a class="btn btn-primary btn-outline-light" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video</a>
                 </div>
               </div>
             </div>
@@ -125,7 +125,7 @@
                   <h6 class="card-subtitle mb-2 text-muted">Technical Writer</h6>
                   <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
                   <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
-                  <a class="btn btn-primary btn-outline-light" href="https://people.rit.edu/crn4802/wichacks2017/">View Project</a>
+                  <a class="btn btn-primary btn-outline-light" href="https://people.rit.edu/crn4802/wichacks2017/">Website</a>
                 </div>
               </div>
             </div>
@@ -137,7 +137,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
                 <p class="card-text">An interactive scene where the user can admire music.</p>
                 <p class="card-text"> JavaScript</p>
-                <a class="btn btn-primary btn-outline-light" href="https://people.rit.edu/ab4854/330/projects/ProjectOne/audioVisualizer.html">View Project</a>
+                <a class="btn btn-primary btn-outline-light" href="https://people.rit.edu/ab4854/330/projects/ProjectOne/audioVisualizer.html"> Website</a>
               </div>
             </div>
           </div>
@@ -153,6 +153,7 @@
               <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
               <p class="card-text">Sea creatures are out of control! It's up to you to stop them by hitting them with sea urchins.</p>
               <p class="card-text"> C#, Unity, Photoshop, Paint Tool Sai</p>
+              <p class="card-text"> In Development. </p>
             </div>
           </div>
         </div>
@@ -164,6 +165,7 @@
               <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
               <p class="card-text">An interactive scene to admire a llama from afar.</p>
               <p class="card-text"> JavaScript, Three.JS, Blender</p>
+              <p class="card-text"> Not viewable, still image.</p>
             </div>
           </div>
         </div>
@@ -175,7 +177,7 @@
               <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
               <p class="card-text">An interactive web drawing application.</p>
               <p class="card-text"> JavaScript</p>
-              <a class="btn btn-primary btn-outline-light" href="http://alexiabernardo.com/paint-app/paint-app.html">View Project</a>
+              <a class="btn btn-primary btn-outline-light" href="http://alexiabernardo.com/paint-app/paint-app.html">Website</a>
             </div>
           </div>
         </div>
