rounded iframe corners

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 
     <!-- Page Content -->
     <div class="container">
-      <br>
       <!-- Portfolio Section -->
       <h3>Projects</h3>
       <hr>
@@ -62,7 +61,7 @@
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card border border-white h-100">
            <!-- <img class="card-img-top" src="media/libyrinth.png" alt="The Libyrinth">-->
-            <div class="embed-responsive embed-responsive-16by9">
+            <div class="embed-responsive embed-responsive-16by9 roundedIframe ">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/i5BB6Fa43lk" allowfullscreen></iframe>
               </div>
             <div class="card-body">
@@ -105,7 +104,7 @@
           <div class="col-lg-4 col-sm-6 portfolio-item">
               <div class="card border-white h-100">
                <!-- <img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders">-->
-                <div class="embed-responsive embed-responsive-16by9">
+                <div class="embed-responsive embed-responsive-16by9 roundedIframe">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8bXgioN3e-o" allowfullscreen></iframe>
                   </div>
                 <div class="card-body">
@@ -182,9 +181,10 @@
           </div>
         </div>
       </div>
+    </div>
 
-    <!-- About Section -->
-    <div class = "container">
+     <!-- About Section -->
+     <div class = "container">
         <h3>About Me</h3>
         <hr>
       <div class="row mb-4 about">
