fixed navbar padding

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container">
-        <a href = "index.html"><img id = "logo" src="media/logo.png" class="img-fluid" alt="Responsive image"></a>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <a class="navbar-brand" href="index.html">
+            <img src= "media/logo.png" width="30" height="30" class="d-inline-block align-top" id = "logo" alt="Responsive image">
+        </a>
           <ul class="navbar-nav ml-auto">
-            <li>
+            <li class = "nav-item">
                <a href= "https://github.com/abernardo97" class="btn btn-outline-light rounded-circle btn-social-icon btn-github">
                   <span class="fa fa-github"></span>
                 </a>
@@ -47,8 +47,6 @@
                 </a>
             </li>
           </ul>
-        </div>
-      </div>
     </nav>
 
     <!-- Page Content -->
@@ -69,7 +67,7 @@
               <h6 class="card-subtitle mb-2 text-muted">Project Manager, Lead Artist</h6>
               <p class="card-text">Librarians stalk the halls in search of you! Sneak through the library and don’t get caught.</p>
               <p class="card-text"> C#, Unity, Blender, Photoshop </p>
-                <a class="btn btn-primary btn-outline-light" href="https://youtu.be/i5BB6Fa43lk">Video</a>
+                <a class="btn btn-primary btn-outline-light portfolioButton" href="https://youtu.be/i5BB6Fa43lk">Video</a>
             </div>
           </div>
         </div>
@@ -81,7 +79,7 @@
                   <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
-                  <a class="btn btn-primary btn-outline-light" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">eCard</a>
+                  <a class="btn btn-primary btn-outline-light portfolioButton" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">eCard</a>
                 </div>
               </div>
             </div>
@@ -93,7 +91,7 @@
                   <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
-                  <a class="btn btn-primary btn-outline-light" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">eCard</a>
+                  <a class="btn btn-primary btn-outline-light portfolioButton" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">eCard</a>
                 </div>
               </div>
             </div>
@@ -105,14 +103,14 @@
               <div class="card border-white h-100">
                <!-- <img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders">-->
                 <div class="embed-responsive embed-responsive-16by9 roundedIframe">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8bXgioN3e-o" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item portfolioButton" src="https://www.youtube.com/embed/8bXgioN3e-o" allowfullscreen></iframe>
                   </div>
                 <div class="card-body">
                   <h4 class="card-title">Firefighting Fox Finders</h4>
                   <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
                   <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help.</p>
                   <p class="card-text"> C#, Unity, Blender, Photoshop </p>
-                    <a class="btn btn-primary btn-outline-light" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video</a>
+                    <a class="btn btn-primary btn-outline-light portfolioButton" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video</a>
                 </div>
               </div>
             </div>
@@ -124,7 +122,7 @@
                   <h6 class="card-subtitle mb-2 text-muted">Technical Writer</h6>
                   <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
                   <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
-                  <a class="btn btn-primary btn-outline-light" href="https://people.rit.edu/crn4802/wichacks2017/">Website</a>
+                  <a class="btn btn-primary btn-outline-light portfolioButton " href="https://people.rit.edu/crn4802/wichacks2017/">Website</a>
                 </div>
               </div>
             </div>
@@ -136,7 +134,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
                 <p class="card-text">An interactive scene where the user can admire music.</p>
                 <p class="card-text"> JavaScript</p>
-                <a class="btn btn-primary btn-outline-light" href="https://people.rit.edu/ab4854/330/projects/updated-audio/web-audio.html"> Website</a>
+                <a class="btn btn-primary btn-outline-light portfolioButton" href="https://people.rit.edu/ab4854/330/projects/updated-audio/web-audio.html"> Website</a>
               </div>
             </div>
           </div>
@@ -192,7 +190,7 @@
             <h5>Alexia Bernardo</h5>
             <p> Hi. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
             <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
-            <a class="btn btn-primary btn-outline-light resumeButton" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
+            <a class="btn btn-primary btn-outline-light aboutButton" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
           </div> 
           <div class="col-md-4 text-center">
               <img class="img-fluid img-thumbnail border-secondary  rounded-circle mb-4 me" src="media/me.jpg" alt="Picture of Me">
@@ -205,7 +203,6 @@
 
     <!-- Footer -->
     <footer class= "py-5 footer">
-      <div class= "container">
           <p class="m-0 text-right text-white">
               <a href= "https://github.com/abernardo97" class="btn rounded-circle btn-outline-light btn-social-icon btn-github">
                 <span class="fa fa-github"></span>
@@ -217,7 +214,6 @@
         <p class="m-0 text-right text-white"><a href="mailto:me@alexiabernardo.com">Contact</a> |<a href="media/AlexiaBernardoResume.pdf"> Resume</a></p>
         <p class="m-0 text-right text-white">&copy; 2019 Alexia Bernardo. All Rights Reserved.</p>  
         <p class="m-0 text-right text-white">Framework from <a href="https://getbootstrap.com/">Bootstrap.</a></p>              
-      </div>
     </footer>
 
    <!-- Bootstrap core JavaScript -->
