added name to the beginning

--- a/index.html
+++ b/index.html
@@ -49,8 +49,14 @@
           </ul>
     </nav>
 
+      <!-- Name Section -->
+      <div class = "aboutMe">
+        <h1 class = "text-center"> Alexia Bernardo </h1>
+        <h4 class = "texted-muted text-center"> Interactive Developer</h4>
+      </div>
+
     <!-- Page Content -->
-    <div class="container">
+    <div class= "projects">
       <!-- Portfolio Section -->
       <h3>Projects</h3>
       <hr>
@@ -182,8 +188,8 @@
     </div>
 
      <!-- About Section -->
-     <div class = "container">
-        <h3>About Me</h3>
+     <div class = "aboutMe">
+        <h3> About Me</h3>
         <hr>
       <div class="row mb-4 about">
           <div class="col-md-8">
