--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <h4 class="card-title">Llama in a Jar</h4>
               <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
               <p class="card-text">An interactive scene to admire a llama from afar.</p>
-              <p class="card-text"> JavaScript, Three.JS, Blender</p>
+              <p class="card-text"> JavaScript, Three.JS, Blender, Photoshop</p>
               <p class="card-text"> Not viewable, still image.</p>
             </div>
           </div>
