add hackathon project

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
             </div>
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card border-white h-100">
-              <img class="card-img-top" src="media/audioVisualizer.png" alt="Audio Visualizer">
+              <img class="card-img-top" src="media/knowcooking.png" alt="Know Cooking Experience">
               <div class="card-body">
-                <h4 class="card-title">Audio Visualizer</h4>
-                <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
-                <p class="card-text">An interactive scene where the user can admire music.</p>
-                <p class="card-text"> JavaScript</p>
-                <a class="btn btn-primary btn-outline-light portfolioButton" href="https://people.rit.edu/ab4854/330/projects/updated-audio/web-audio.html"> Website</a>
+                <h4 class="card-title">Know Cooking Experience</h4>
+                <h6 class="card-subtitle mb-2 text-muted">Team</h6>
+                <p class="card-text">Rather than blow up your kitchen in real life, learn how to cook in virtual reality!</p>
+                <p class="card-text">C#, Unity, Photoshop, Bootstrap</p>
+                <a class="btn btn-primary btn-outline-light portfolioButton" href="https://kawaiikitty99.github.io/knowcookingexperience/"> Website</a>
               </div>
             </div>
           </div>
@@ -170,6 +170,17 @@
               <p class="card-text"> JavaScript, Three.JS, Blender, Photoshop</p>
               <p class="card-text"> Not viewable, still image.</p>
             </div>
+          </div>
+        </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card border-white h-100">
+          <img class="card-img-top" src="media/audioVisualizer.png" alt="Audio Visualizer">
+          <div class="card-body">
+            <h4 class="card-title">Audio Visualizer</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
+            <p class="card-text">An interactive scene where the user can admire music.</p>
+            <p class="card-text"> JavaScript</p>
+            <a class="btn btn-primary btn-outline-light portfolioButton" href="https://people.rit.edu/ab4854/330/projects/updated-audio/web-audio.html"> Website</a>
           </div>
         </div>
       </div>
