--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <img class="card-img-top" src="media/knowcooking.png" alt="Know Cooking Experience">
               <div class="card-body">
                 <h4 class="card-title">Know Cooking Experience</h4>
-                <h6 class="card-subtitle mb-2 text-muted">Team</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Web Developer</h6>
                 <p class="card-text">Rather than blow up your kitchen in real life, learn how to cook in virtual reality!</p>
                 <p class="card-text">C#, Unity, Photoshop, Bootstrap</p>
                 <a class="btn btn-primary btn-outline-light portfolioButton" href="https://kawaiikitty99.github.io/knowcookingexperience/"> Website</a>
