--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </div>
             <div class="card-body">
               <h4 class="card-title">The Libyrinth</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Project Manager, Lead Artist</h6>
+              <h6 class="card-subtitle mb-2 text-muted">Project Manager, 2D/3D Artist</h6>
               <p class="card-text">Librarians stalk the halls in search of you! Sneak through the library and don’t get caught.</p>
               <p class="card-text"> C#, Unity, Blender, Photoshop </p>
                 <a class="btn btn-primary btn-outline-light portfolioButton" href="https://youtu.be/i5BB6Fa43lk">Video</a>
@@ -82,7 +82,7 @@
                 <img class="card-img-top" src="media/HogsImage2.png" alt="Hidden Object Game">
                 <div class="card-body">
                   <h4 class="card-title">Birthday Enchantment Hidden Objects Game</h4>
-                  <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
+                  <h6 class="card-subtitle mb-2 text-muted"> 2D Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
                   <a class="btn btn-primary btn-outline-light portfolioButton" href="https://www.bluemountain.com/ecards/seasonal/birthday-enchantment-hidden-objects-game/card-3488749">eCard</a>
@@ -94,7 +94,7 @@
                 <img class="card-img-top" src="media/HogsImage.png" alt="Hidden Object Game">
                 <div class="card-body">
                   <h4 class="card-title">Enchanted Courtyard Hidden Object Game</h4>
-                  <h6 class="card-subtitle mb-2 text-muted">Technical Artist</h6>
+                  <h6 class="card-subtitle mb-2 text-muted"> 2D Technical Artist</h6>
                   <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
                   <p class="card-text"> TypeScript, PIXI.JS, Greensock.JS, Photoshop </p>
                   <a class="btn btn-primary btn-outline-light portfolioButton" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">eCard</a>
@@ -113,7 +113,7 @@
                   </div>
                 <div class="card-body">
                   <h4 class="card-title">Firefighting Fox Finders</h4>
-                  <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
+                  <h6 class="card-subtitle mb-2 text-muted">2D/3D Artist</h6>
                   <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help.</p>
                   <p class="card-text"> C#, Unity, Blender, Photoshop </p>
                     <a class="btn btn-primary btn-outline-light portfolioButton" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video</a>
@@ -153,7 +153,7 @@
             <img class="card-img-top" src="media/saltwaterShowdown.png" alt="Saltwater Showdown">
             <div class="card-body">
               <h4 class="card-title">Saltwater Showdown</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Lead Artist</h6>
+              <h6 class="card-subtitle mb-2 text-muted">2D Artist</h6>
               <p class="card-text">Sea creatures are out of control! It's up to you to stop them by hitting them with sea urchins.</p>
               <p class="card-text"> C#, Unity, Photoshop, Paint Tool Sai</p>
               <p class="card-text"> In Development. </p>
