--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- Name Section -->
       <div class = "aboutMe">
         <h1 class = "text-center"> Alexia Bernardo </h1>
-        <h4 class = "texted-muted text-center"> Interactive Developer</h4>
+        <h4 class = "texted-muted text-center"> Software Engineer</h4>
       </div>
 
     <!-- Page Content -->
@@ -128,7 +128,6 @@
                   <h6 class="card-subtitle mb-2 text-muted">Technical Writer</h6>
                   <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
                   <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
-                  <a class="btn btn-primary btn-outline-light portfolioButton " href="https://people.rit.edu/crn4802/wichacks2017/">Website</a>
                 </div>
               </div>
             </div>
@@ -156,7 +155,6 @@
               <h6 class="card-subtitle mb-2 text-muted">2D Artist</h6>
               <p class="card-text">Sea creatures are out of control! It's up to you to stop them by hitting them with sea urchins.</p>
               <p class="card-text"> C#, Unity, Photoshop, Paint Tool Sai</p>
-              <p class="card-text"> In Development. </p>
             </div>
           </div>
         </div>
@@ -168,7 +166,6 @@
               <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
               <p class="card-text">An interactive scene to admire a llama from afar.</p>
               <p class="card-text"> JavaScript, Three.JS, Blender, Photoshop</p>
-              <p class="card-text"> Not viewable, still image.</p>
             </div>
           </div>
         </div>
@@ -193,8 +190,7 @@
       <div class="row mb-4 about">
           <div class="col-md-8">
             <h5>Alexia Bernardo</h5>
-            <p> Hi. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
-            <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
+            <p> Alexia Bernardo is a software engineer in test with web, mobile, and video game software product life cycle experience in a cross-functional agile team environment. Proficient in developing and analyzing test strategies and plans to build test automation suites using object oriented programming. She is currently exploring life long learning education platforms to explore programming languages, spoken languages, personal finance, and digital painting.</p>
             <a class="btn btn-primary btn-outline-light aboutButton" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
           </div> 
           <div class="col-md-4 text-center">
@@ -217,7 +213,7 @@
               </a>
             </p>  
         <p class="m-0 text-right text-white"><a href="mailto:me@alexiabernardo.com">Contact</a> |<a href="media/AlexiaBernardoResume.pdf"> Resume</a></p>
-        <p class="m-0 text-right text-white">&copy; 2019 Alexia Bernardo. All Rights Reserved.</p>  
+        <p class="m-0 text-right text-white">&copy; 2020 Alexia Bernardo. All Rights Reserved.</p>  
         <p class="m-0 text-right text-white">Framework from <a href="https://getbootstrap.com/">Bootstrap.</a></p>              
     </footer>
 
