--- a/index.html
+++ b/index.html
@@ -120,17 +120,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-6 portfolio-item">
-              <div class="card border-white h-100">
-                <img class="card-img-top" src="media/HelloWorldMiniImage.png" alt="Hello World">
-                <div class="card-body">
-                  <h4 class="card-title">Hello, World</h4>
-                  <h6 class="card-subtitle mb-2 text-muted">Technical Writer</h6>
-                  <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
-                  <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
-                </div>
-              </div>
-            </div>
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card border-white h-100">
               <img class="card-img-top" src="media/knowcooking.png" alt="Know Cooking Experience">
@@ -143,44 +132,17 @@
               </div>
             </div>
           </div>
-        </div>
-      
-    <!-- Project Row 3-->
-    <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card border-white h-100">
-            <img class="card-img-top" src="media/saltwaterShowdown.png" alt="Saltwater Showdown">
+            <img class="card-img-top" src="media/HelloWorldMiniImage.png" alt="Hello World">
             <div class="card-body">
-              <h4 class="card-title">Saltwater Showdown</h4>
-              <h6 class="card-subtitle mb-2 text-muted">2D Artist</h6>
-              <p class="card-text">Sea creatures are out of control! It's up to you to stop them by hitting them with sea urchins.</p>
-              <p class="card-text"> C#, Unity, Photoshop, Paint Tool Sai</p>
+              <h4 class="card-title">Hello, World</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Technical Writer</h6>
+              <p class="card-text">In a cold and desolate factory, you play as a cute little robot, distraught from all the programming bugs that are messing up your system!</p>
+              <p class="card-text"> C#, Monogame, Paint Tool Sai </p>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card border-white h-100">
-            <img class="card-img-top" src="media/LlamaJarNormal.png" alt="Llama Card">
-            <div class="card-body">
-              <h4 class="card-title">Llama in a Jar</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
-              <p class="card-text">An interactive scene to admire a llama from afar.</p>
-              <p class="card-text"> JavaScript, Three.JS, Blender, Photoshop</p>
-            </div>
-          </div>
-        </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card border-white h-100">
-          <img class="card-img-top" src="media/audioVisualizer.png" alt="Audio Visualizer">
-          <div class="card-body">
-            <h4 class="card-title">Audio Visualizer</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Solo</h6>
-            <p class="card-text">An interactive scene where the user can admire music.</p>
-            <p class="card-text"> JavaScript</p>
-            <a class="btn btn-primary btn-outline-light portfolioButton" href="https://people.rit.edu/ab4854/330/projects/updated-audio/web-audio.html"> Website</a>
-          </div>
-        </div>
-      </div>
     </div>
 
      <!-- About Section -->
@@ -188,16 +150,11 @@
         <h3> About Me</h3>
         <hr>
       <div class="row mb-4 about">
-          <div class="col-md-8">
+          <div>
             <h5>Alexia Bernardo</h5>
             <p> Alexia Bernardo is a software engineer in test with web, mobile, and video game software product life cycle experience in a cross-functional agile team environment. Proficient in developing and analyzing test strategies and plans to build test automation suites using object oriented programming. She is currently exploring life long learning education platforms to explore programming languages, spoken languages, personal finance, and digital painting.</p>
             <a class="btn btn-primary btn-outline-light aboutButton" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
           </div> 
-          <div class="col-md-4 text-center">
-              <img class="img-fluid img-thumbnail border-secondary  rounded-circle mb-4 me" src="media/me.jpg" alt="Picture of Me">
-              <p class="m-0">Orange County, NY</p>
-              <p class="m-0"><a href="mailto:me@alexiabernardo.com">me@alexiabernardo.com</a></p>
-          </div>
         </div>
       </div>
     </div>
