updated meta description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="Alexia Bernardo Personal Portfolio">
-    <meta name="description" content="Hi. I'm Alexia Bernardo. I’m a designer fueled by compassion, curiosity, and interest for interactive design.">
+    <meta name="description" content="Alexia Bernardo is a software engineer in test with web, mobile, and video game software product life cycle experience in a cross-functional agile team environment. Proficient in developing and analyzing test strategies and plans to build test automation suites using object oriented programming.">
     <meta name="keywords" content="game design, interactive software design, game development, software development, 3D modeling, digital art">
     <meta name="language" content="English">
     <meta name="revisit-after" content="3 days">
